# mediawikirag

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  wiki_rag_architecture.md
prompts/: german_default.txt
scripts/: chat.py  migrate_to_chroma.py  update_index.py
src/: __init__.py  chunker.py  cli.py  config.py  download.py  embedder.py  fetcher.py  llm.py  main.py  prompts.py  retriever.py  storage.py  test_chunker_manual.py  test_embedder_manual.py  test_fetcher_manual.py  test_pipeline_manual.py  test_retriever_manual.py  test_storage_manual.py  vectorstore.py  vectorstore_chroma.py
tests/: test_chunker.py  test_chunker_recursive.py  test_download.py  test_embedder.py  test_fetcher.py  test_llm_wrapper.py  test_main.py  test_storage.py
