
[project]
name = "mediawikirag"
version = "0.1.0"
description = "A Python project managed with uv."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"sentence-transformers>=2.2.0",
	"requests>=2.31.0",
	"numpy>=1.24.0",
	"tqdm>=4.66.0",
	"pyyaml>=6.0",
	"rich>=13.0.0"
]

[tool.uv]

[tool.uv.extra-build-dependencies]
mediawikirag = ["uv.build"]

[build-system]
requires = ["uv", "uv.build"]
build-backend = "uv.build"
