[tool.hatch.build.targets.wheel]
packages = ["src"]
[project]
name = "mediawikirag"
version = "0.1.0"
description = "A Python project managed with uv."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0",
    "ollama>=0.3.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "gpt4all>=1.0.0",
    # faiss-cpu has limited Windows wheel support; mark it platform-specific
    "faiss-cpu>=1.7.4; sys_platform != 'win32'",
    "chromadb>=0.3.26"
]

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=7.0",
    "pytest-mock>=3.10"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration can go here if needed